overflowing container customization, bugfixes

--- a/src/css/jquery.smartSticky.css
+++ b/src/css/jquery.smartSticky.css
@@ -1,5 +1,5 @@
 /**
-* jquery.smartSticky 2.5.0
+* jquery.smartSticky 2.6.0
 * https://github.com/oplaner4/jquery.smartSticky
 * by Ondrej Planer, oplaner4@gmail.com
 * 
@@ -14,29 +14,29 @@
 */
 
 .sticky-smart {
-    position: fixed;
+    position: absolute;
 }
 
-.sticky-smart-container {
+.sticky-smart-parent {
     position: relative;
 }
 
-    .sticky-smart.sticky-smart-active {
-        z-index: 1048;
-        padding: .5rem 15px;
-        -webkit-box-shadow: 0 0rem 2rem rgba(0,0,0,.15);
-        box-shadow: 0 0rem 2rem rgba(0,0,0,.15);
-        -webkit-transition: opacity .1s ease-in-out;
-        -o-transition: opacity .1s ease-in-out;
-        transition: opacity .1s ease-in-out;
-        margin: 0;
+.sticky-smart.sticky-smart-active {
+    z-index: 1048;
+    padding: .5rem 15px;
+    -webkit-box-shadow: 0 0rem 2rem rgba(0,0,0,.15);
+    box-shadow: 0 0rem 2rem rgba(0,0,0,.15);
+    -webkit-transition: opacity .1s ease-in-out;
+    -o-transition: opacity .1s ease-in-out;
+    transition: opacity .1s ease-in-out;
+    margin: 0;
+}
+
+    .sticky-smart.sticky-smart-active.sticky-smart-invisible, .sticky-smart-placeholder {
+        opacity: 0;
+        visibility: hidden;
     }
 
-        .sticky-smart.sticky-smart-active.sticky-smart-invisible, .sticky-smart-placeholder {
-            opacity: 0;
-            visibility: hidden;
-        }
-
-        .sticky-smart.sticky-smart-active.sticky-smart-background {
-            background-color: white;
-        }
+    .sticky-smart.sticky-smart-active.sticky-smart-background {
+        background-color: white;
+    }
